# stuff

./: .gitignore  .gitmodules
Projects/: README.md
Projects/Auth/: README.md
Projects/Calculator/: README.md
Projects/Climate Change/: README.md
Projects/Climate Change/DAC/: README.md
Projects/Climate Change/DWC/: README.md
Projects/Cryptu/: README.md
Projects/Cryptunes/: README.md
Projects/Cryptunes/Cryptu/: README.md
Projects/Inequality/: README.md
Projects/Inequality/Gender/: README.md
Projects/Inequality/Knowledge/: README.md
Projects/Inequality/Racial/: README.md
Projects/Inequality/Wealth/: README.md
Projects/Lifespan/: README.md
Projects/NFTs/: README.md
Projects/Podcast/: README.md
Projects/Scarcity/: README.md
Projects/Search Engine/: README.md
Projects/Shopping Site/: README.md  package.json
Projects/Shopping Site/public/: index.html
Projects/Shopping Site/src/: App.js
Projects/Song Recommendations/: README.md
Projects/Suggestions-Questions-Comments/: README.md
Projects/Wearables/: README.md
Study/: README.md
Study/Blockchain/Ethereum/: README.md
Study/Data Structures/: README.md
Study/Data Structures/Array/: introduction_to_arrays  introduction_to_arrays.md
Study/Frameworks/: README.md
Study/Frameworks/D3/: README.md
Study/Guides/: README.md
Study/Inequality/: README.md
Study/Languages/: README.md
Study/Languages/Rust/Proxy/: .gitignore  Cargo.toml  Dockerfile  README.md
Study/Languages/Rust/Proxy/src/: main.rs
Study/Machine Learning/: README.md
Study/Mathmatics/: README.md
(+222 files in other folders)
