[package]
name = "proxy"
version = "0.1.0"
authors = ["alschofield93 <alschofield93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_env_logger = "0.4"
